feat : js 파일 생성성

--- a/html.html
+++ b/html.html
@@ -10,6 +10,6 @@
 <body>
     <div id="main part"></div>
     <div id="quiz part" style="display: none;"></div>
-    <script></script>
+    <script src="quiz.js"></script>
 </body>
 </html>
