feat : 코드 일부 수정  -사이드바 생성  -사이드바 트리거 생성  -css(사이드바)추가  -js(사이드바 기능)추가가

--- a/html.html
+++ b/html.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
-    <div id="main part"></div>
+    <button id="toggleBtn">메뉴 열기</button>
+    <div id="sidebar"></div>
+    <div id="mainpart"></div>
     <div id="quiz part" style="display: none;"></div>
     <script src="quiz.js"></script>
 </body>
