--- a/html.html
+++ b/html.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
+    <img src="butt1.png" alt="버튼">
     <button id="toggleBtn">메뉴 열기</button>
     <div id="sidebar"></div>
     <div id="mainpart"></div>
