faet : 단어 선택 기능 추가  -css로 위치조정할 필요 있음

--- a/html.html
+++ b/html.html
@@ -29,10 +29,30 @@
         <h1>welc<span style="color: #66cc33;">o</span>me!</h1>
 
     <!-- 단어 선택 input -->
-        
-   </div>
+        <div class="wordoption">
+            <select name="word" id="word" multiple size="4">
+                <option value="1">Day1</option>
+                <option value="2">Day2</option>
+                <option value="3">Day3</option>
+                <option value="4">Day4</option>
+                <option value="5">Day5</option>
+                <option value="6">Day6</option>
+                <option value="7">Day7</option>
+                <option value="8">Day8</option>
+                <option value="9">Day9</option>
+                <option value="10">Day10</option>
+                <option value="11">Day11</option>
+                <option value="12">Day12</option>
+                <option value="13">Day13</option>
+                <option value="14">Day14</option>
+                <option value="15">Day15</option>
+                <option value="16">Day16</option>
+            </select>
+        </div>    
+    </div>
 
-  <script src="script.js"></script>
+<script src="quiz.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
