feat : 단어 선택 기능 변경  -드롭다운에서 체크박스로 변경

--- a/html.html
+++ b/html.html
@@ -19,35 +19,30 @@
             <h2>사이드바</h2>
             <p>이곳에 메뉴나 내용을 넣을 수 있습니다.</p>
         </div>
-
-
-
    </div> 
 
    <div id="mainpart">
     <!-- 홈화면면 제목 -->
         <h1>welc<span style="color: #66cc33;">o</span>me!</h1>
-
+        
     <!-- 단어 선택 input -->
         <div class="wordoption">
-            <select name="word" id="word" multiple size="4">
-                <option value="1">Day1</option>
-                <option value="2">Day2</option>
-                <option value="3">Day3</option>
-                <option value="4">Day4</option>
-                <option value="5">Day5</option>
-                <option value="6">Day6</option>
-                <option value="7">Day7</option>
-                <option value="8">Day8</option>
-                <option value="9">Day9</option>
-                <option value="10">Day10</option>
-                <option value="11">Day11</option>
-                <option value="12">Day12</option>
-                <option value="13">Day13</option>
-                <option value="14">Day14</option>
-                <option value="15">Day15</option>
-                <option value="16">Day16</option>
-            </select>
+            <label><input class="itam" type="checkbox" value="d1">Day1</label>
+            <label><input class="itam" type="checkbox" value="d2">Day2</label>
+            <label><input class="itam" type="checkbox" value="d3">Day3</label>
+            <label><input class="itam" type="checkbox" value="d4">Day4</label>
+            <label><input class="itam" type="checkbox" value="d5">Day5</label>
+            <label><input class="itam" type="checkbox" value="d6">Day6</label>
+            <label><input class="itam" type="checkbox" value="d7">Day7</label>
+            <label><input class="itam" type="checkbox" value="d8">Day8</label>
+            <label><input class="itam" type="checkbox" value="d9">Day9</label>
+            <label><input class="itam" type="checkbox" value="d10">Day10</label>
+            <label><input class="itam" type="checkbox" value="d11">Day11</label>
+            <label><input class="itam" type="checkbox" value="d12">Day12</label>
+            <label><input class="itam" type="checkbox" value="d13">Day13</label>
+            <label><input class="itam" type="checkbox" value="d14">Day14</label>
+            <label><input class="itam" type="checkbox" value="d15">Day15</label>
+            <label><input class="itam" type="checkbox" value="d16">Day16</label>
         </div>    
     </div>
 
