feat : 사이드바 요소 추가가

--- a/html.html
+++ b/html.html
@@ -16,15 +16,18 @@
         <!-- 사이드바 -->
             <div class="sidebar" id="sidebar">
                 <button class="close-btn" onclick="closeSidebar()"></button>
-                <h2>사이드바</h2>
-                <p>이곳에 메뉴나 내용을 넣을 수 있습니다.</p>
+                <h2>단<spon style="color: #66cc33;">어</spon>장 by <span style="color: #66cc33;">;</span></h2>
+                <hr style="width: auto; height: 2px; background-color: #555555; border: none">
+                <button id="Reselect">DAY 재선택</button>
+                <button id="Review">오답복습</button>
+                <button id="Favorites">즐겨찾기된 단어</button>
+                <button id="Statistics">통계</button>
             </div>
    </div> 
 
    <div id="mainpart">
         <!-- 홈화면면 제목 -->
             <h1>welc<span style="color: #66cc33;">o</span>me!</h1>
-        
         <!-- form 써서 url로 예문 페이지에 day 정보 보내버릴거임-->
         <form id="goStart">
         <!-- 단어 선택 input -->
