기본 페이지와 대강 비슷한 구성, 예문, 정답입력란 div 해둠

--- a/example.html
+++ b/example.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>2025운정고 영어 구문 논술 수행평가 test 사이트</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
+    <div id="sbarpart">
+        <!--사이드바 열기 버튼 -->
+            <button class="open-btn" onclick="openSidebar()"></button>
+
+        <!-- 사이드바 -->
+            <div class="sidebar" id="sidebar">
+                <button class="close-btn" onclick="closeSidebar()"></button>
+                <h2>사이드바</h2>
+                <p>이곳에 메뉴나 내용을 넣을 수 있습니다.</p>
+            </div>
+   </div>
+    <script src="script2.js"></script>
+
+   <div id="exmplpart"> <!--예문 띄울 공간-->
     
+
+
+   </div>
+
+   <div id="answerpart"> <!--정답 입력란-->
+        <label><input type="text"></label>
+
+
+   </div>
 </body>
 </html>
