--- a/example.html
+++ b/example.html
@@ -20,15 +20,17 @@
             </div>
    </div>
     <script src="script2.js"></script>
+    <br>
 
    <div id="exmplpart"> <!--예문 띄울 공간-->
-    
-
+    <h3>영어 예문이 띄워집니다</h3>
+    <h3>해석문이 띄워집니다</h3>
 
    </div>
 
    <div id="answerpart"> <!--정답 입력란-->
-        <label><input type="text"></label>
+        <input type="text" id="answer" placeholder="정답을 입력하세요." autocomplete="off">
+        <button onclick="submit">제출</button>
 
 
    </div>
