--- a/html.html
+++ b/html.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2025운정고 영어 구문 논술 수행평가 test 사이트</title>
+    <title>영어수행 만점 가자</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
 </head>
@@ -55,6 +55,7 @@
         </form>
     </div>
 
+<h5 style="color: #555555;">made by</h5>
 <script src="quiz.js"></script>
 <script src="script.js"></script>
 
