feat : css변경  - h3테그 css코드 추가가

--- a/example.html
+++ b/example.html
@@ -15,10 +15,15 @@
         <!-- 사이드바 -->
             <div class="sidebar" id="sidebar">
                 <button class="close-btn" onclick="closeSidebar()"></button>
-                <h2>사이드바</h2>
-                <p>이곳에 메뉴나 내용을 넣을 수 있습니다.</p>
+                <h2>단<spon style="color: #66cc33;">어</spon>장 by <span style="color: #66cc33;">;</span></h2>
+                <hr style="width: auto; height: 2px; background-color: #555555; border: none">
+                <button id="Reselect">DAY 재선택</button>
+                <button id="Review">오답복습</button>
+                <button id="Favorites">즐겨찾기된 단어</button>
+                <button id="Statistics">통계</button>
             </div>
    </div>
+    <script src="script.js"></script>
     <script src="script2.js"></script>
     <br>
 
