script2.js에 셀수 없이 많은 기능 추가함 주석 봐주세요...

--- a/example.html
+++ b/example.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
+    
     <div id="sbarpart">
         <!--사이드바 열기 버튼 -->
             <button class="open-btn" onclick="openSidebar()"></button>
@@ -23,7 +24,7 @@
                 <button id="Statistics">통계</button>
             </div>
    </div>
-    <script src="script.js"></script>
+    <!--<script src="script.js"></script>-->
     <script src="script2.js"></script>
     <br>
 
@@ -34,10 +35,10 @@
    </div>
 
    <div id="answerpart"> <!--정답 입력란-->
-        <input type="text" id="answer" placeholder="정답을 입력하세요." autocomplete="off">
-        <button onclick="submit">제출</button>
-
+        <!-- <input type="text" id="answer" placeholder="정답을 입력하세요." autocomplete="off"> -->
 
    </div>
+
+   <button onclick="submit">제출</button>
 </body>
 </html>
