--- a/example.html
+++ b/example.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2025운정고 영어 구문 논술 수행평가 test 사이트</title>
+    <title>영어수행 만점 가자</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
 </head>
@@ -17,10 +17,10 @@
                 <button class="close-btn" onclick="closeSidebar()"></button>
                 <h2>단<spon style="color: #66cc33;">어</spon>장 by <span style="color: #66cc33;">;</span></h2>
                 <hr style="width: auto; height: 2px; background-color: #555555; border: none">
-                <button id="Reselect">DAY 재선택</button>
-                <button id="Review">오답복습</button>
-                <button id="Favorites">즐겨찾기된 단어</button>
-                <button id="Statistics">통계</button>
+                <button class="Reselect">DAY 재선택</button>
+                <button class="Review">오답복습</button>
+                <button class="Favorites">즐겨찾기된 단어</button>
+                <button class="Statistics">통계</button>
             </div>
    </div>
     <script src="script.js"></script>
