--- a/example.html
+++ b/example.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
 </head>
-<body>
-    
+
+<body> 
     <div id="sbarpart">
         <!--사이드바 열기 버튼 -->
             <button class="open-btn" onclick="openSidebar()"></button>
@@ -24,7 +24,7 @@
                 <button class="Statistics">통계</button>
             </div>
    </div>
-    <!--<script src="script.js"></script>-->
+    <script src="script.js"></script>
     <script src="script2.js"></script>
     <br>
 
@@ -32,13 +32,6 @@
     <h3>영어 예문이 띄워집니다</h3>
     <h3>해석문이 띄워집니다</h3>
 
-   </div>
-
-   <div id="answerpart"> <!--정답 입력란-->
-        <!-- <input type="text" id="answer" placeholder="정답을 입력하세요." autocomplete="off"> -->
-
-   </div>
-
-   <button onclick="submit">제출</button>
+   <button class="okBtn" onclick="submit">제출</button>
 </body>
 </html>
