--- a/html.html
+++ b/html.html
@@ -18,10 +18,14 @@
                 <button class="close-btn" onclick="closeSidebar()"></button>
                 <h2>단<spon style="color: #66cc33;">어</spon>장 by <span style="color: #66cc33;">;</span></h2>
                 <hr style="width: auto; height: 2px; background-color: #555555; border: none">
-                <button class="Reselect">DAY 재선택</button>
-                <button class="Review">오답복습</button>
-                <button class="Favorites">즐겨찾기된 단어</button>
-                <button class="Statistics">통계</button>
+                
+                <div class="sidebar-Btn">
+                    <button class="Reselect">DAY 재선택</button>
+                    <button class="Review">오답복습</button>
+                    <button class="Favorites">즐겨찾기된 단어</button>
+                    <button class="Statistics">통계</button>
+                </div>
+                
             </div>
    </div> 
 
@@ -50,7 +54,7 @@
                 <label><input class="itam" type="checkbox" name="day" value="d16">Day16</label>
             </div>
 
-            <div id="mainbtn">
+            <div class="mainbtn">
                 <button type="button" id="selectAllBtn">모두 선택</button>
                 <button type="button" id="deselectAllBtn">모두 취소</button>
                 <button type="submit" id="startAllBtn">시작하기</button>
