정답 오답 기능 구현됨됨

--- a/example.html
+++ b/example.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="container">
-        <button class="okBtn" onclick="submit">제출</button>
+        <button class="okBtn" onclick="submit()">제출</button>
     </div>
    
 </body>
