progress 만들어버림요요

--- a/example.html
+++ b/example.html
@@ -30,6 +30,10 @@
 
     <br>
 
+    <div class="progress">
+        <div id="progress"></div>
+    </div>
+
     <div id="exmplpart"> <!--예문 띄울 공간-->
         <h3 id="exp">영어 예문이 띄워집니다</h3>
         <h3 id="asp">해석문이 띄워집니다</h3>
