--- a/html.html
+++ b/html.html
@@ -19,17 +19,11 @@
                 <h2>단<spon style="color: #66cc33;">어</spon>장 by <span style="color: #66cc33;">;</span></h2>
                 <hr style="width: auto; height: 2px; background-color: #555555; border: none">
                 <button class="Reselect" onclick="goToPage()">DAY 재선택</button>
-                <button class="Review" onclick="Reviewopenbtn()">오답복습</button>
+                <button class="Review">오답복습</button>
                 <button class="Favorites">즐겨찾기된 단어</button>
                 <button class="Statistics">통계</button>
             </div>
    </div> 
-
-   <div class="Review-sidebarpart" id="Review-sidebarpart">
-            <div class="sidebar2" id="sidebar2">
-                <p>dkssud</p>
-            </div>
-   </div>
 
    <div id="mainpart">
         <!-- 홈화면면 제목 -->
@@ -65,7 +59,7 @@
     </div>
 
 <h5 style="color: #555555;">made by 정빈, 범서, 예강, 상혁, 승민, 종호, 하윤</h5>
-<script src="quiz.js"></script>
+
 <script src="script.js"></script>
 </body>
 </html>
