무언가 바뀜

--- a/html.html
+++ b/html.html
@@ -19,9 +19,9 @@
                 <h2>단<spon style="color: #66cc33;">어</spon>장 by <span style="color: #66cc33;">;</span></h2>
                 <hr style="width: auto; height: 2px; background-color: #555555; border: none">
                 <button class="Reselect" onclick="goToPage()">DAY 재선택</button>
-                <button class="Review">오답복습</button>
-                <button class="Favorites">즐겨찾기된 단어</button>
-                <button class="Statistics">통계</button>
+                <button class="Review">오답복습(미완)</button>
+                <button class="Favorites">즐겨찾기된 단어(미완)</button>
+                <button class="Statistics">통계(미완)</button>
             </div>
    </div> 
 
