오류수정정

--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
         </form>
     </div>
 
-<h5 style="color: #555555;">made by 정빈, 범서, 예강, 상혁, 승민, 종호, 하윤</h5>
-
+<h5 style="color: #555555;">made by 정빈, 범서, 예강, 상혁, 승민, 종호, 하윤 / 문의 : 인스타 an0_9jb</h5>
 <script src="script.js"></script>
 </body>
 </html>
