--- a/example.html
+++ b/example.html
@@ -11,19 +11,19 @@
 <body> 
     <div id="sbarpart">
         <!--사이드바 열기 버튼 -->
-            <button class="open-btn" onclick="openSidebar()"></button>
+        <button class="open-btn" onclick="openSidebar()"></button>
 
         <!-- 사이드바 -->
-            <div class="sidebar" id="sidebar">
-                <button class="close-btn" onclick="closeSidebar()"></button>
-                <h2>단<spon style="color: #66cc33;">어</spon>장 by <span style="color: #66cc33;">;</span></h2>
-                <hr style="width: auto; height: 2px; background-color: #555555; border: none">
-                <button class="Reselect" onclick="goToPage()">DAY 재선택</button>
-                <button class="Review">오답복습(미완)</button>
-                <button class="Favorites">즐겨찾기된 단어(미완)</button>
-                <button class="Statistics">통계(미완)</button>
-            </div>
-   </div>
+        <div class="sidebar" id="sidebar">
+            <button class="close-btn" onclick="closeSidebar()"></button>
+            <h2>단<spon style="color: #66cc33;">어</spon>장 by <span style="color: #66cc33;">;</span></h2>
+            <hr style="width: auto; height: 2px; background-color: #555555; border: none">
+            <button class="Reselect" onclick="goToPage()">DAY 재선택</button>
+            <button class="Review">오답복습(미완)</button>
+            <button class="Favorites">즐겨찾기된 단어(미완)</button>
+            <button class="Statistics">통계(미완)</button>
+        </div>
+    </div>
    
     <br>
 
@@ -31,13 +31,16 @@
         <div id="progress"></div>
     </div>
 
-    <div id="exmplpart"> <!--예문 띄울 공간-->
+    <div id="exmplpart">
         <h3 id="exp">영어 예문이 띄워집니다</h3>
         <h3 id="asp">해석문이 띄워집니다</h3>
     </div>
 
     <div class="container">
         <button class="okBtn" onclick="submit()">제출</button>
+
+        <!-- ✅ 정답/오답 피드백 메시지 출력 영역 -->
+        <div id="feedback" style="margin-top: 10px; font-weight: bold;"></div>
     </div>
     
     <script src="script.js"></script>
