input 창 크기 변경경

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </form>
     </div>
 
-<h5 style="color: #555555;">made by 정빈, 범서, 예강, 상혁, 승민, 종호, 하윤 / 문의 : 인스타 an0_9jb</h5>
+<h5 style="color: #555555;">made by 정빈, 범서, 예강, 상혁, 승민, 종호, 하윤 / 오류문의 : 인스타 an0_9jb(오류난 화면을 찍어서 보내주세요)</h5>
 <script src="script.js"></script>
 </body>
 </html>
